--- a/luca-server/package.json
+++ b/luca-server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -10,8 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "morgan": "^1.10.0"
+    "express": "^4.17.1"
   }
 }
