--- a/luca-server/package.json
+++ b/luca-server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon server.js --exec babel-node"
+    "start" : "nodemon index.js --exec babel-node"
   },
   "author": "",
   "license": "ISC",
