--- a/luca-server/package.json
+++ b/luca-server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.16.1"
   },
   "devDependencies": {
