--- a/luca-server/package.json
+++ b/luca-server/package.json
@@ -11,20 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.4",
-    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "nodemailer": "^6.7.2",
+    "qs": "^6.10.3",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "session": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "sequelize": "^6.13.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "sequelize-cli": "^6.4.1"
+    "nodemon": "^2.0.15"
   }
 }
