--- a/luca-server/package.json
+++ b/luca-server/package.json
@@ -23,9 +23,11 @@
     "express-session": "^1.17.2",
     "session": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.2.0"
   }
 }
