--- a/luca-server/package.json
+++ b/luca-server/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.12.5"
+    "sequelize": "^6.12.5",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
