--- a/luca-server/package.json
+++ b/luca-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,10 +20,6 @@
     "sequelize": "^6.12.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.0",
-    "@babel/core": "^7.17.2",
-    "@babel/node": "^7.16.8",
-    "@babel/preset-env": "^7.16.11",
     "nodemon": "^2.0.15",
     "sequelize-cli": "^6.3.0"
   }
