--- a/luca-server/package.json
+++ b/luca-server/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.7.2",
