--- a/luca-server/package.json
+++ b/luca-server/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -22,6 +24,7 @@
     "session": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "ejs": "^3.1.6",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
