--- a/luca-server/package.json
+++ b/luca-server/package.json
@@ -15,17 +15,18 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.7.2",
     "qs": "^6.10.3",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
+    "sequelize": "^6.3.5",
     "session": "^0.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "ejs": "^3.1.6",
-    "sequelize": "^6.3.5"
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
