--- a/luca-client/package.json
+++ b/luca-client/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-zoom-pan-pinch": "^2.1.3",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
