--- a/luca-client/package.json
+++ b/luca-client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.0",
     "d3": "^7.3.0",
     "dotenv": "^16.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
