--- a/luca-server/package.json
+++ b/luca-server/package.json
@@ -1,39 +1,45 @@
 {
-  "name": "luca-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.21.4",
-    "bcrypt": "^5.0.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.2.5",
-    "nodemailer": "^6.7.2",
-    "qs": "^6.10.3",
-    "sequelize": "^6.3.5",
-    "session": "^0.1.0",
-    "socket.io": "^4.4.1",
-    "typesafe-actions": "^5.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15",
-    "sequelize-cli": "^6.2.0"
-  },
-  "optionalDependencies": {
-    "fsevents": "*"
-  }
+   "name": "luca-server",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "start": "nodemon ./src/server.ts"
+   },
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "@types/bcrypt": "^5.0.0",
+      "@types/cookie-parser": "^1.4.2",
+      "@types/ejs": "^3.1.0",
+      "@types/jsonwebtoken": "^8.5.8",
+      "@types/nodemailer": "^6.4.1",
+      "axios": "^0.21.4",
+      "bcrypt": "^5.0.1",
+      "cookie-parser": "^1.4.6",
+      "cors": "^2.8.5",
+      "dotenv": "^8.6.0",
+      "ejs": "^3.1.6",
+      "express": "^4.17.3",
+      "jsonwebtoken": "^8.5.1",
+      "morgan": "^1.10.0",
+      "mysql": "^2.18.1",
+      "mysql2": "^2.3.3",
+      "nodemailer": "^6.7.2",
+      "reflect-metadata": "^0.1.13",
+      "sequelize": "^6.17.0",
+      "socket.io": "^4.4.1",
+      "typeorm": "^0.2.45",
+      "typesafe-actions": "^5.1.0",
+      "typescript": "^4.6.2"
+   },
+   "devDependencies": {
+      "@types/cors": "^2.8.12",
+      "@types/express": "^4.17.13",
+      "@types/node": "^17.0.21",
+      "@types/validator": "^13.7.1",
+      "nodemon": "^2.0.15",
+      "sequelize-cli": "^6.4.1",
+      "ts-node": "^10.7.0"
+   }
 }
